#81212: Restrict size for selected nav item to prevent overflow

--- a/Snowdog_Components/components/Organisms/dashboard/nav/_nav.scss
+++ b/Snowdog_Components/components/Organisms/dashboard/nav/_nav.scss
@@ -169,6 +169,11 @@
                 display: none;
             }
         }
+
+        & > strong {
+            display: block;
+            max-width: 20ch;
+        }
     }
 
     .nav.item > a {
